# st-wattch

./: .env.example  index.html  package-lock.json  package.json
backend/: pyproject.toml
backend/app/: main.py
public/: robots.txt
src/: App.css  App.tsx  index.css  main.tsx
src/components/: AIChatbot.tsx  AffiliateButton.tsx  BackToTop.tsx  BrandMarquee.tsx  Breadcrumbs.tsx  ChatBot.tsx  ErrorBoundary.tsx  Footer.tsx  Hero.tsx  LoadingSpinner.tsx  Navbar.tsx  Newsletter.tsx  NewsletterPopup.tsx  ProductCard.tsx  RatingBar.tsx  ReadingProgress.tsx  Recommendations.tsx  StarRating.tsx  TableOfContents.tsx  VirtualTryOn.tsx  WatchCard.tsx
src/components/ai/: AIImageAltText.tsx  AIReviewSummary.tsx  AISEOOptimizer.tsx  AISemanticSearch.tsx  PersonalizedRecommendations.tsx  WatchAdvisor.tsx
src/context/: AppContext.tsx  LanguageContext.tsx  ThemeContext.tsx
src/data/: translations.ts  types.ts  watches.ts
src/hooks/: useApi.ts  useScrollReveal.ts
src/i18n/: ar.ts  en.ts  index.ts
src/pages/: AIComparisonPage.tsx  AISettingsPage.tsx  AboutPage.tsx  AffiliateDisclosure.tsx  AffiliateDisclosurePage.tsx  BestOfPage.tsx  BlogPage.tsx  Categories.tsx  CategoriesPage.tsx  ComparePage.tsx  ComparisonPage.tsx  Home.tsx  HomePage.tsx  NotFoundPage.tsx  NotificationWriterPage.tsx  Privacy.tsx  PrivacyPage.tsx  PrivacyPolicyPage.tsx  ReviewPage.tsx  ReviewsListPage.tsx  SalesAnalyzerPage.tsx  Search.tsx  SearchPage.tsx  Terms.tsx  TermsOfServicePage.tsx  TermsPage.tsx  TryOnPage.tsx  WatchDetail.tsx
src/types/: mediapipe.d.ts  watch.ts
src/utils/: theme.ts
(+25 files in other folders)
